fix z-index header + css main

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,8 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 1;
   height: 63px;
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
@@ -119,7 +121,8 @@ main {
   display: flex;
   flex-direction: column;
 }
-main .favorite {
+
+.favorite {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -129,14 +132,14 @@ main .favorite {
   font-size: 22px;
   cursor: pointer;
 }
-main .favorite .fa-heart {
+.favorite .fa-heart {
   position: absolute;
 }
-main .favorite__unliked {
+.favorite__unliked {
   transition: opacity 300ms;
   opacity: 1;
 }
-main .favorite .favorite__liked {
+.favorite .favorite__liked {
   transition: opacity 300ms;
   opacity: 0;
   background: linear-gradient(193.33deg, #9356dc -11.44%, #ff79da 123.93%);
@@ -144,15 +147,16 @@ main .favorite .favorite__liked {
           background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-main .favorite:hover .favorite__unliked {
+.favorite:hover .favorite__unliked {
   transition: opacity 300ms;
   opacity: 0;
 }
-main .favorite:hover .favorite__liked {
+.favorite:hover .favorite__liked {
   transition: opacity 300ms;
   opacity: 1;
 }
-main .info-group {
+
+.info-group {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -160,37 +164,39 @@ main .info-group {
   gap: 25px;
   text-align: center;
 }
-main .info-group__headline {
+.info-group__headline {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
-main .restaurant-image {
+
+.restaurant-image {
   display: flex;
   height: 275px;
   margin-bottom: -40px;
 }
-main .restaurant-image img {
+.restaurant-image img {
   -o-object-fit: cover;
      object-fit: cover;
 }
-main .section {
+
+.section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 55px 20px 65px 20px;
   gap: 25px;
 }
-main .section--white {
+.section--white {
   background-color: #ffffff;
 }
-main .section .fonctionnement-list {
+.section .fonctionnement-list {
   display: flex;
   flex-direction: column;
   gap: 25px;
   counter-reset: step;
 }
-main .section .fonctionnement-list__step {
+.section .fonctionnement-list__step {
   display: flex;
   align-items: center;
   position: relative;
@@ -202,7 +208,7 @@ main .section .fonctionnement-list__step {
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
   font-weight: 500;
 }
-main .section .fonctionnement-list__step::before {
+.section .fonctionnement-list__step::before {
   counter-increment: step;
   content: counter(step);
   display: flex;
@@ -216,24 +222,24 @@ main .section .fonctionnement-list__step::before {
   color: #ffffff;
   border-radius: 12px;
 }
-main .section .fonctionnement-list__step-icon {
+.section .fonctionnement-list__step-icon {
   color: #7e7e7e;
   margin-right: 20px;
 }
-main .section .fonctionnement-list__step-icon--primary-color {
+.section .fonctionnement-list__step-icon--primary-color {
   color: #9356dc;
 }
-main .section .cards {
+.section .cards {
   display: flex;
   flex-direction: column;
   gap: 18px;
 }
-main .section .cards--menu {
+.section .cards--menu {
   min-inline-size: auto;
   gap: 12px;
   border: none;
 }
-main .section .cards .card {
+.section .cards .card {
   display: flex;
   flex-direction: column;
   position: relative;
@@ -242,14 +248,14 @@ main .section .cards .card {
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
   overflow: hidden;
 }
-main .section .cards .card__img {
+.section .cards .card__img {
   height: 171px;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 15px 15px 0 0;
 }
-main .section .cards .card__badge-new {
+.section .cards .card__badge-new {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -265,55 +271,56 @@ main .section .cards .card__badge-new {
   color: #008766;
   font-size: 14px;
 }
-main .section .cards .card__badge-new--hide {
+.section .cards .card__badge-new--hide {
   display: none;
 }
-main .section .cards .card__content {
+.section .cards .card__content {
   display: flex;
   justify-content: space-between;
   flex: 1;
   padding: 16px 25px 16px 16px;
   overflow: hidden;
 }
-main .section .cards .card__content--menu {
+.section .cards .card__content--menu {
   padding: 12px 15px;
 }
-main .section .cards .card__txt {
+.section .cards .card__txt {
   display: flex;
   flex-direction: column;
   gap: 5px;
   overflow: hidden;
   margin-right: 12px;
 }
-main .section .cards .card__title, main .section .cards .card__subtitle {
+.section .cards .card__title, .section .cards .card__subtitle {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-main .menu {
+
+.menu {
   background-color: #f6f6f6;
   padding: 32px 13px 40px 13px;
   gap: 40px;
   border-radius: 20px 20px 0 0;
 }
-main .menu__headline {
+.menu__headline {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 4px;
   color: #101010;
 }
-main .menu__headline__title {
+.menu__headline__title {
   font-family: "Shrikhand", sans-serif;
   font-weight: 400;
   font-size: 28px;
 }
-main .menu__headline__favorite {
+.menu__headline__favorite {
   padding: 0 15px;
   width: 24px;
   font-size: 24px;
 }
-main .menu__legend {
+.menu__legend {
   float: left;
   position: relative;
   z-index: 1;
@@ -322,7 +329,7 @@ main .menu__legend {
   font-size: 16px;
   font-weight: 300;
 }
-main .menu__legend::before {
+.menu__legend::before {
   content: "";
   position: absolute;
   left: 0;
@@ -331,20 +338,20 @@ main .menu__legend::before {
   width: 40px;
   border-bottom: 3px solid #99e2d0;
 }
-main .menu .cards .card {
+.menu .cards .card {
   flex-direction: row-reverse;
   justify-content: space-between;
   cursor: pointer;
   position: relative;
 }
-main .menu .card input {
+.menu .card input {
   position: absolute;
   opacity: 0;
   cursor: pointer;
   height: 0;
   width: 0;
 }
-main .menu__checkmark {
+.menu__checkmark {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -359,13 +366,13 @@ main .menu__checkmark {
   transform-origin: right 50%;
   transition: margin-right 300ms ease-in-out;
 }
-main .menu .card input:hover + .menu__checkmark {
+.menu .card input:hover + .menu__checkmark {
   width: 60px;
   margin-right: 0px;
   transform-origin: right 50%;
   transition: margin-right 150ms ease-in-out;
 }
-main .menu__price {
+.menu__price {
   display: flex;
   align-items: flex-end;
   font-weight: 700;
